--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/VeterinariaGrupo85
 excludes=
 file.reference.flatlaf-3.2.5.jar=src\\lib\\flatlaf-3.2.5.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Owner\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.zip=src\\lib\\jcalendar-1.4.zip
 file.reference.mariadb-java-client-3.1.4.jar=src\\lib\\mariadb-java-client-3.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-3.2.5.jar}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar}
+    ${file.reference.mariadb-java-client-3.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.zip}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
